# theoretical-limitations-overparameterized-ensembles

./: .pre-commit-config.yaml  README.md  pyproject.toml
overparameterized_ensembles/: __init__.py
overparameterized_ensembles/data_generation/: data_generation.py  neural_network_data_generation.py
overparameterized_ensembles/experiments/: average_difference_vs_num_features.py  average_difference_vs_num_features_equal_params_neural_networks.py  average_difference_vs_num_features_equal_params_neural_networks_pointwise.py  average_difference_vs_num_features_pointwise.py  compare_ensembles_vs_single_equal_params_neural_networks.py  compare_ensembles_vs_single_equal_params_neural_networks_pointwise.py  convergence_expected_value_term.py  experiments.py  generalization_error_decay.py  lipschitz_difference_infinite_models.py  train_and_save_neural_networks.py  variance_development_non_asymptotic_theorem.py  variance_vs_number_of_features.py  variance_vs_points_in_range.py  visualize_models.py
overparameterized_ensembles/matrices_and_kernels/: kernel_calculations.py  matrix_calculations.py
overparameterized_ensembles/models/: ensembles.py  kernel_models.py  model_utils.py  neural_network_models.py  random_feature_models.py
overparameterized_ensembles/monte_carlo/: monte_carlo.py  w_terms.py
overparameterized_ensembles/utils/: constants.py  utils.py
overparameterized_ensembles/visualization/: data_visualization.py  plots.py
scripts/: compare_ensembles_vs_single_equal_params.sh  train_250_nns.sh  train_average_difference_vs_num_features_neural_networks_equal_params.sh
