[project]
name = "overparameterized-ensembles"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pytorch-lightning>=2.5.0.post0",
    "scikit-learn>=1.6.1",
    "setuptools>=75.8.0",
    "torch>=2.5.1",
    "typer>=0.15.1",
    "wandb>=0.19.3",
]
